# LingoFlow

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  ocr-redesign-preview.html  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.mjs
src-tauri/: CLAUDE.md  Cargo.toml  build.rs  clippy.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  lib.rs  main.rs  runtime_settings_sync.rs  settings_persistence.rs  settings_secret_fields.rs  shortcuts.rs  tray.rs  window_lifecycle.rs
src-tauri/src/apiprovider/: baidu_fanyi.rs  bing_web.rs  bing_web_debug.rs  bing_web_support.rs  deepl_free.rs  google_translate.rs  http_error.rs  microsoft_translator.rs  mod.rs  runtime_config.rs  tencent_tmt.rs  tencent_tmt_signer.rs  youdao_web.rs  youdao_web_support.rs
src-tauri/src/commands/: debug.rs  mod.rs  ocr.rs  permissions.rs  runtime_settings.rs  settings.rs  shortcuts.rs  tesseract_ocr.rs  translation.rs  window_display.rs
src-tauri/src/errors/: app_error.rs  error_code.rs
src-tauri/src/http_api/: controller.rs  mod.rs  routes.rs  runtime_provider_settings.rs  server.rs  state.rs  ui_dispatcher.rs
src-tauri/src/orchestrator/: mod.rs  models.rs  ocr_execution.rs  ocr_text.rs  provider_selection.rs  service.rs  service_ocr.rs  service_translation.rs  state_machine.rs  translation_execution.rs
src-tauri/src/platform/: capture.rs  macos_helper.rs  mod.rs  permissions.rs  selection.rs  windows_capture.rs  windows_capture_png.rs  windows_window.rs
src-tauri/src/providers/: apple_vision_ocr.rs  base64.rs  mod.rs  openai_compatible.rs  openai_compatible_ocr.rs  registry.rs  runtime_ocr_factory.rs  runtime_translate_factory.rs  tesseract_js_bridge.rs  tesseract_js_ocr.rs  traits.rs
src-tauri/src/storage/: config_store.rs  (+4 more)
src-tauri/tests/: global_shortcut_bug_exploration.proptest-regressions  global_shortcut_bug_exploration.rs  global_shortcut_preservation.rs  windows_capture_script.rs
(+171 files in other folders)
