[package]
name = "lingoflow"
version = "0.1.0"
description = "Lightweight desktop translator"
edition = "2021"

[lib]
name = "lingoflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-trait = "0.1"
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
md5 = "0.7"
time = { version = "0.3", features = ["std"] }
aes = "0.8"
cbc = "0.1"
base64 = "0.22"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }

[dev-dependencies]
proptest = "1.5"
